deployment/02_backend/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: counter-app
  namespace: 254501-samready
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      name: counter-backend
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/heldertheking/counter-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
