deployment/02_backend/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: counter-app
  namespace: 254501-samready
spec:
  selector:
    app: counter-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
